--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.1",
+    "@fontsource/lato": "^4.5.10",
+    "@types/react": "^18.0.33",
     "astro": "^2.2.0",
-    "astro-tooltips": "^0.6.2"
+    "astro-scroll-observer": "^0.5.3",
+    "astro-tooltips": "^0.6.2",
+    "sass": "^1.61.0"
   }
 }
