--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.16.5",
-    "@astrojs/react": "^2.1.1",
-    "@fontsource/lato": "^4.5.10",
+    "@astrojs/react": "^3.6.1",
+    "@fontsource/lato": "^5.0.21",
     "@types/react": "^18.0.33",
-    "astro": "^2.2.1",
+    "astro": "^4.13.1",
     "astro-scroll-observer": "^0.5.3",
     "astro-tooltips": "^0.6.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.61.0"
   }
 }
