--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "noImplicitAny": true,
     "jsx": "react",
     "allowJs": true,
+    "types": ["astro/client"],
     "moduleResolution": "node",
     "allowImportingTsExtensions": true
   }
